--- a/teams/team2/values-jenkins.yaml
+++ b/teams/team2/values-jenkins.yaml
@@ -45,7 +45,7 @@ controller:
   # If you disable the non-Jenkins identity store and instead use the Jenkins internal one,
   # you should revert controller.adminUser to your preferred admin user:
   adminUser: "admin"
-  # adminPassword: <defaults to random>
+  adminPassword: "welcome"
   admin:
     existingSecret: ""
     userKey: jenkins-admin-user
