--- a/teams/team2/vault.yaml
+++ b/teams/team2/vault.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: jenkins-team3
+  name: vault-team2
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "0"
@@ -10,13 +10,11 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: team3
+    namespace: team2
   source:
-    path: components/jenkins
+    path: components/vault
     repoURL: 'https://github.com/spectrocloud/gitops-jenkins.git'
     targetRevision: HEAD
-    helm:
-      valueFiles: ['../../teams/team3/values-jenkins.yaml']
   project: default
   syncPolicy:
     automated:
