--- a/teams/team2/grafana.yaml
+++ b/teams/team2/grafana.yaml
@@ -16,7 +16,7 @@ spec:
     repoURL: 'https://github.com/spectrocloud/gitops-jenkins.git'
     targetRevision: HEAD
     helm:
-      params:
+      parameters:
       - name: ingress.hosts[0]
         value: grafana-team2.cluster1.discovery.spectrocloud.com
   project: default
