--- a/teams/team2/grafana.yaml
+++ b/teams/team2/grafana.yaml
@@ -16,6 +16,7 @@ spec:
     repoURL: 'https://github.com/spectrocloud/gitops-jenkins.git'
     targetRevision: HEAD
     helm:
+      valueFiles: ['values-ifc.yaml']
       parameters:
       - name: ingress.hosts[0]
         value: grafana-team2.cluster1.discovery.spectrocloud.com
